# Book_Manage_System_QT

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  resource.qrc
Headers/data_structures/: bookList.hpp
Headers/forms/: about_window.hpp  book_analysis_window.hpp  browseBookWindow.hpp  createBookListWindow.hpp  deduplicateListSubWindow.hpp  editBookWindow.hpp  editListSubWindow.hpp  goodNewsWindow.hpp  insertListSubWindow.hpp  main_menu_window.hpp  searchBookWindow.hpp
Headers/utils/: pinyin_convert.hpp
Sources/: PinyinMapParser.cpp  aboutwindow.cpp  bookList.cpp  bookanalysiswindow.cpp  browsebook.cpp  convert.cpp  createbooklist.cpp  deduplicatelistsubwindow.cpp  editbook.cpp  editlistsubwindow.cpp  goodnews.cpp  insertlistsubwindow.cpp  main.cpp  main_menu.cpp  mainmenu.cpp  searchbook.cpp
Sources/Forms/: aboutWindow.cpp  aboutwindow.ui  bookAnalysisWindow.cpp  bookanalysiswindow.ui  browseBookWindow.cpp  browsebook.ui  createBookListWindow.cpp  createbooklist.ui  deduplicateListSubWindow.cpp  deduplicatelistsubwindow.ui  editBookWindow.cpp  editListSubWindow.cpp  editbook.ui  editlistsubwindow.ui  goodNewsWindow.cpp  goodnews.ui  insertListSubWindow.cpp  insertlistsubwindow.ui  mainMenuWindow.cpp  main_menu.ui  mainmenu.ui  searchBookWindow.cpp  searchbook.ui
Sources/Forms/ui/: aboutWindow.ui  bookAnalysisWindow.ui  browseBookWindow.ui  createBookListWindow.ui  deduplicateListSubWindow.ui  editBookWindow.ui  editListSubWindow.ui  goodNewsWindow.ui  insertListSubWindow.ui  mainMenuWindow.ui  searchBookWindow.ui
Sources/Headers/: PinyinMapParser.hpp  aboutwindow.hpp  bookList.hpp  bookanalysiswindow.hpp  browsebook.hpp  convert.hpp  createbooklist.hpp  deduplicatelistsubwindow.hpp  editbook.hpp  editlistsubwindow.hpp  goodnews.hpp  insertlistsubwindow.hpp  main_menu.hpp  mainmenu.hpp  searchbook.hpp
